codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__luna_reserve_usage_tests__luna_reserve_usage_narrow.snap
---
source: tui/src/chatwidget/tests/luna_reserve_usage_tests.rs
assertion_line: 124
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 34))"
---
──────────────────────────────────
❯ Ask Codex to do anything
──────────────────────────────────
  Luna Reserve default · /tmp/pro…
